--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>노브 테스트</title>
+<html>
+<title>밤마</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css\index.css">
 </head>
 
 <body>
-    <h1>
-        <a href="event/">이벤트 페이지</a>
-    </h1>
+
+    <div class="left-box">
+        <li><strong>TEST</strong></li>
+
+    </div>
+
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><b><</b></a>
+    </div>
+
+    <span class="open" style="font-size:30px;cursor:pointe; position: absolute; top: 400px;left: 270px;" onclick="openNav()"><a href="javaskript:void(0)"><b>></b></a></span>
+
+    <script src="js\index.js"></script>
+
 </body>
 
 </html>
